test/testfile_emulator-5554_0.txt
--------- beginning of main
F/BIFUZ_BROADCAST(  961): adb -s emulator-5554 shell am broadcast -n com.android.providers.media/com.android.providers.media.MediaScannerReceiver 
D/AndroidRuntime(  963): 
D/AndroidRuntime(  963): >>>>>> AndroidRuntime START com.android.internal.os.RuntimeInit <<<<<<
D/AndroidRuntime(  963): CheckJNI is ON
D/dalvikvm(  963): Trying to load lib libjavacore.so 0x0
D/dalvikvm(  963): Added shared lib libjavacore.so 0x0
D/dalvikvm(  963): Trying to load lib libnativehelper.so 0x0
D/dalvikvm(  963): Added shared lib libnativehelper.so 0x0
D/dalvikvm(  963): No JNI_OnLoad found in libnativehelper.so 0x0, skipping init
D/dalvikvm(  963): Note: class Landroid/app/ActivityManagerNative; has 179 unimplemented (abstract) methods
I/WearableConn(  484): Connecting via TCP to /10.0.2.2:5601
W/WearableConn(  484): Error writing to device, error: failed to connect to /10.0.2.2 (port 5601): connect failed: ECONNREFUSED (Connection refused)
I/WearableConn(  484): Socket closed
I/WearableConn(  484): Waiting 4.0 seconds to retry connection
E/memtrack(  963): Couldn't load memtrack module (No such file or directory)
E/android.os.Debug(  963): failed to load memtrack module: -2
D/AndroidRuntime(  963): Calling main entry com.android.commands.am.Am
D/AndroidRuntime(  656): Shutting down VM
W/dalvikvm(  656): threadid=1: thread exiting with uncaught exception (group=0xb3a40d70)
--------- beginning of system
E/AndroidRuntime(  656): FATAL EXCEPTION: main
E/AndroidRuntime(  656): Process: android.process.media, PID: 656
E/AndroidRuntime(  656): java.lang.RuntimeException: Unable to start receiver com.android.providers.media.MediaScannerReceiver: java.lang.NullPointerException
E/AndroidRuntime(  656): 	at android.app.ActivityThread.handleReceiver(ActivityThread.java:2439)
E/AndroidRuntime(  656): 	at android.app.ActivityThread.access$1700(ActivityThread.java:138)
E/AndroidRuntime(  656): 	at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1285)
E/AndroidRuntime(  656): 	at android.os.Handler.dispatchMessage(Handler.java:102)
E/AndroidRuntime(  656): 	at android.os.Looper.loop(Looper.java:136)
E/AndroidRuntime(  656): 	at android.app.ActivityThread.main(ActivityThread.java:5026)
E/AndroidRuntime(  656): 	at java.lang.reflect.Method.invokeNative(Native Method)
E/AndroidRuntime(  656): 	at java.lang.reflect.Method.invoke(Method.java:515)
E/AndroidRuntime(  656): 	at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:777)
E/AndroidRuntime(  656): 	at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:602)
E/AndroidRuntime(  656): 	at dalvik.system.NativeStart.main(Native Method)
E/AndroidRuntime(  656): Caused by: java.lang.NullPointerException
E/AndroidRuntime(  656): 	at com.android.providers.media.MediaScannerReceiver.onReceive(MediaScannerReceiver.java:44)
E/AndroidRuntime(  656): 	at android.app.ActivityThread.handleReceiver(ActivityThread.java:2432)
E/AndroidRuntime(  656): 	... 10 more
D/AndroidRuntime(  963): Shutting down VM
D/dalvikvm(  963): Debugger has detached; object registry had 1 entries
